
= ruote-couch - CHANGELOG.txt

== ruote-couch 2.1.3    released 2009/01/05
